server/public/css/login.css
html{
    background-color: #fff;
    font-size: 10px;
}

body {
    height: 100vh;
    width: 100vw;
    font-family: 'Alegreya Sans ', sans-serif;
    background-image: url("../images/background/estee-janssens-396874-unsplash.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat; 

}

.overlay{
    height: 100%;
    background-color: rgba(128, 170, 175, 0.5);
}

.shadow-overlay{
    height: 100%;
    background: -moz-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.3) 100%);
    background: -webkit-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.3) 100%);
    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.3) 100%);
}


.image-container{
    width: 15rem;
    height: 15rem;
    margin: 0 auto;

}

.image-container img{
    padding-top: 20%;
    height: auto;
    width: 90%;
    display: inline-flex;
    
}

.login-wrapper {
    padding: 5% 0%;
    width: 100%;
    height: 50%;
}

.appNameContainer {
    width: 100%;
    height: 10%;
    display: inline-flex;
    font-size: 8vw;
    color: white;
    font-family: 'Alegreya Sans SC', sans-serif;
}

.appName {
    margin: 0 auto;
    color: white;
    font-family: 'Alegreya Sans SC', sans-serif;
}

.appDescription {
    font-size: 3vw;
    overflow: hidden;
    height: 100%;
    width: 100%;
    color: white;
    font-family: 'Alegreya Sans SC', sans-serif;
}

.welcome{
    width: 100%;
    height: 100%;
    width: 60%;
    padding: 5%;
    border-radius: 18px;
    background-color: transparent !important;
    background-color: rgba(242, 242, 242, 0.8) !important;
}
.login-wrapper .loginFormContainer{
    width: 60%;
    padding: 5%;
    /* border: 1px solid #EEE; */
    border-radius: 18px;
    background-color: transparent !important;
    background-color: rgba(242, 242, 242, 0.8) !important;
    display: none;
}

.emailPwdInput{
    /* background-color: rgba(255,255,255, 0.9); */
    /* border-radius: 5%; */
    /* padding: 13px 30px; */
}

.emailPwdInput .input-field label{
    /* color: white; */
    font-size: 1.5rem;
    
}

.emailPwdInput input[type=password], 
.emailPwdInput input[type=email]{
    /* border-bottom: 1px solid white;  */
    font-size: 1.8rem;
}

.emailPwdInput input[type=password].valid,
.emailPwdInput input[type=email].valid{
    border-bottom: 1px solid #9e9e9e;
    box-shadow: none;
}

.emailPwdInput input[type=password]:focus.valid,
.emailPwdInput input[type=email]:focus.valid{
    border-bottom: 1px solid #9e9e9e;
    box-shadow: none;
}

/* .loading {
    background-color: gray;
    z-index: 10;
    position: absolute;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100vh;
    display: none;

} */

.input-field input[type=date]:focus + label,
.input-field input[type=text]:focus + label,
.input-field input[type=email]:focus + label,
.input-field input[type=password]:focus + label {
    color: #e91e63;
}

.input-field input[type=date]:focus,
.input-field input[type=text]:focus,
.input-field input[type=email]:focus,
.input-field input[type=password]:focus {
    /* border-bottom: 2px solid #e91e63; */
    box-shadow: none;
}

.responsive-img{
    width: 250px;
}

/* a.col.s12.btn.btn-medium.waves-effect.z-depth-3{
    font-size: 1.2rem;
    border-radius: 10px;
    background-color: rgb(119, 178, 186);
} */

i.col.s12.btn.btn-medium.waves-effect.z-depth-3.waves-input-wrapper{
    font-size: 1.2rem;
    border-radius: 10px;
    background-color: rgb(119, 178, 186);
}


/*----------------------------------------------------------*/



.input-field input[type=date]:focus + label,
.input-field input[type=text]:focus + label,
.input-field input[type=email]:focus + label,
.input-field input[type=password]:focus + label {
    color:  rgb(0, 0, 0, 0.7);
}

.input-field input[type=date]:focus,
.input-field input[type=text]:focus,
.input-field input[type=email]:focus,
.input-field input[type=password]:focus {
    border-bottom: 2px solid  rgb(0, 0, 0, 0.7);
    box-shadow: none;
}

.sign-up {
    position: fixed;
    bottom: 0;
    height: 18%;
    /* width: 60%; */
    /* max-width: 600px; */

}

.sign-up-container,
.about_us_container{
    height: 36px;
    width: 100vw;
    margin-bottom: 15px;
}

a.col.s3.btn.btn-medium.waves-effect.z-depth-2.sign-up {
    position: relative;
    left: 50%;
    transform: translate(-50%, 0);
    font-size: 1.2rem;
    height: 100%;
    width: 30%;
    border-radius: 10px;
    background-color: rgb(119, 178, 186);
}

a.col.s3.btn.btn-medium.waves-effect.z-depth-2.about_us{
    position: relative;
    left: 50%;
    transform: translate(-50%, 0);
    font-size: 1.2rem;
    width: 30%;
    border-radius: 10px;
    background-color: rgb(226, 190, 118);
}

.btn-medium i.small.material-icons{
    vertical-align: top;
}


/**************************** Responsive ******************************/

@media only screen and (min-width: 600px){
    body{
        width: 600px;
        margin: 0 auto;
    }

    .sign-up {
        max-width: 600px;
    }

    .sign-up-container,
    .about_us_container{
        width: 600px;
    }

    .emailPwdInput{
        border-radius: 0%; 
    }
    .login-wrapper .loginFormContainer{
        /* margin: 15% auto 10%; */
    }
}

@media only screen and (max-width: 400px){
    body{
        width: 100%;
    }

}
/* input:focus::-webkit-input-placeholder {
    color: transparent;
} */

